# slub-pylobid

./: README.md  pyproject.toml
slub-pylobid/: pylobid.py
tests/: fixtures.py
