[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slub-pylobid"
version = "2.3.0"
description = "A lobid-REST-API client for the liszt-editor"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Andorfer", email = "p.andorfer@gmail.com" },
    { name = "Christian Lölkes", email = "christian.loelkes@gmail.com" },
    { name = "Nathanael Mehlhorn", email = "nathanael.georg.mehlhorn@slub-dresden.de" },
]
requires-python = ">=3.6"
keywords = ["lobid"]
dependencies = [
    "jsonpath-ng>=1.7.0,<2",
    "requests>=2.27.1",
]

[project.urls]
Repository = "https://github.com/csae8092/pylobid"
Documentation = "https://csae8092.github.io/pylobid/"

[tool.setuptools]
packages = ["pylobid",]
